--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,7 +10,7 @@ events {
 http {
     server {
         listen 80;
-        server_name server;
+        server_name localhost;
 
         location / {
             include uwsgi_params;
@@ -19,14 +19,6 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        location /static {
-            alias /static;
-        }
-
-        location /media {
-            alias /media;
         }
     }
 }
