--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 django = "4.2.16"
 djangorestframework = "3.15.2"
 gunicorn = "20.1.0"
+psycopg2-binary = "^2.9.10"
 
 
 [build-system]
