--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - mynetwork
+      - backbone
     ports:
       - "5433:5432"
     restart: always
@@ -29,6 +29,8 @@ services:
       - db_data:/var/lib/postgresql/data
 
   server:
+    image: snapsapi:latest
+    container_name: django_app
     env_file:
       - .env.docker
     build:
@@ -38,11 +40,11 @@ services:
     #      bash -c "python manage.py migrate &&
     #      python manage.py runserver 0.0.0.0:8000"
     volumes:
-      - .:/apps
-#      - static_volume:/apps/static
-#      - media_volume:/apps/media
+      - .:/app
+      - static_volume:/app/snapsapi/static
+    #      - media_volume:/app/snapsapi/media
     ports:
-      - "8000:8000"
+      - "8080:8080"
     environment:
       - DJANGO_SETTINGS_MODULE=snapsapi.config.settings.docker
       - DB_NAME=${DB_NAME}
@@ -53,7 +55,7 @@ services:
       db:
         condition: service_healthy
     networks:
-      - mynetwork
+      - backbone
 
   nginx:
     image: nginx:latest
@@ -61,17 +63,18 @@ services:
       - "80:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-#      - static_volume:/static
-#      - media_volume:/media
+      - static_volume:/static
+    #      - media_volume:/media
     depends_on:
       - server
     networks:
-      - mynetwork
+      - backbone
 
 volumes:
   db_data:
   static_volume:
-  media_volume:
+#  media_volume:
 
 networks:
-  mynetwork:
+  backbone:
+    driver: bridge
