--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,13 +8,23 @@ events {
 }
 
 http {
+    include       mime.types;
+    default_type  application/octet-stream;
+    upstream django {
+        server server:8080;
+    }
+
     server {
         listen 80;
         server_name localhost;
 
+        location /static/ {
+            alias /static/;
+        }
+
         location / {
             include uwsgi_params;
-            proxy_pass http://server:8000;
+            proxy_pass http://django;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
