--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -16,16 +16,16 @@ ENV PATH=/root/.local/bin:$PATH
 # Install poetry to install our dependencies
 RUN pipx install poetry==1.8.3
 ENV PATH=/root/.local/bin:$PATH
-ENV DJANGO_SETTINGS_MODULE=snapsapi.config.settings.prod
+ENV DJANGO_SETTINGS_MODULE=${snapsapi.config.settings.docker}
 
 COPY pyproject.toml poetry.lock* /app/
 RUN poetry config virtualenvs.create false && \
         poetry config installer.max-workers 10 && \
         poetry install --no-interaction --no-dev --no-ansi --no-root -vvv && \
-        poetry cache clear pypi --all -n
+        poetry cache clear pypi --all -nㅅ3
 
 EXPOSE 8080
 COPY ./entrypoint.sh ./entrypoint.sh
-RUN chmod +x ./entrypoint.sh
-ENTRYPOINT ["./entrypoint.sh"]
+RUN chmod +x ./entrypoi    0-9=
+|ENTRYPOINT ["./entrypoint.sh"]
 CMD ["gunicorn", "snapsapi.config.wsgi:application", "--bind", "0.0.0.0:8080", "--reload"]
