--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,11 +46,11 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - DJANGO_SETTINGS_MODULE=snapsapi.config.settings.docker
+      - DJANGO_SETTINGS_MODULE=${DJANGO_SETTINGS_MODULE}
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
-      - DB_HOST=db
+      - DB_HOST=${DB_HOST}
     depends_on:
       db:
         condition: service_healthy
