:construction_worker: feat: set `drf_spectacular`

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to AWS ECS Blue/Green
 
 on:
   push:
-    branches: [ main ]     # main 브랜치에 push될 때 배포
+    branches: [ main ]
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
