--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,10 @@ shortid = "^0.1.2"
 bson = "^0.5.10"
 drf-spectacular = "^0.28.0"
 botocore = "1.31.1"
+pytest = "^8.3.5"
+responses = "^0.25.7"
+pytest-django = "^4.11.1"
+drf-rw-serializers = "^1.4.0"
 
 
 [build-system]
