--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,9 +40,9 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -f Dockerfile.prod -t $ECR_REPOSITORY:${{ env.SHORT_SHA }} .
-          docker tag $ECR_REPOSITORY:${{ env.SHORT_SHA }} ${{ steps.login-ecr.outputs.registry }}/${ECR_REPOSITORY}:${{ env.SHORT_SHA }}
-          docker push ${{ steps.login-ecr.outputs.registry }}/${ECR_REPOSITORY}:${{ env.SHORT_SHA }}
+          docker build -f Dockerfile -t ${{ env.ECR_REPOSITORY }}:${{ env.SHORT_SHA }} .
+          docker tag ${{ env.ECR_REPOSITORY }}:${{ env.SHORT_SHA }} ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.SHORT_SHA }}
+          docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.SHORT_SHA }}
 
       - name: Fill in the new image ID in the ECS task definition
         id: task-def
@@ -59,9 +59,6 @@ jobs:
           cluster: ${{ env.ECS_CLUSTER }}
           task-definition: ${{ steps.task-def.outputs.task-definition }}
           wait-for-service-stability: true
-          # CodeDeploy(블루그린 포함)에서 배포하려면 아래 필요한 option을 추가할 수 있습니다.
-          # codedeploy-appspec: appspec.yaml
-          # codedeploy-application: ${{ secrets.CODEDEPLOY_APPLICATION }}
-          # codedeploy-deployment-group: ${{ secrets.CODEDEPLOY_DEPLOYMENT_GROUP }}
-
-      # 필요하다면 슬랙 알림 등 추가
+          codedeploy-appspec: appspec.yaml
+          codedeploy-application: ${{ env.CODEDEPLOY_APPLICATION }}
+          codedeploy-deployment-group: ${{ env.CODEDEPLOY_DEPLOYMENT_GROUP }}
