--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ jobs:
   deploy:
     name: Deploy to AWS ECS (Blue/Green)
     runs-on: ubuntu-latest
+    environment: prod
 
     env:
       AWS_REGION: ${{ secrets.AWS_REGION }}
