--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -f Dockerfile -t ${{ env.ECR_REPOSITORY }}:${{ env.SHORT_SHA }} .
+          docker buildx build --platform linux/amd64 --no-cache -f Dockerfile -t ${{ env.ECR_REPOSITORY }}:${{ env.SHORT_SHA }} .
           docker tag ${{ env.ECR_REPOSITORY }}:${{ env.SHORT_SHA }} ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.SHORT_SHA }}
           docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.SHORT_SHA }}
 
