--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
           container-name: ${{ env.CONTAINER_NAME }}
           image: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.SHORT_SHA }}
           environment-variables: |
-            CONTAINER_NAME=${{secrets.CONTAINER_NAME}}
+            CONTAINER_NAME=${{env.CONTAINER_NAME}}
             DOCKER_IMAGE_NAME=${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}
             SNAPSAPI_SECRET_KEY=${{secrets.SNAPSAPI_SECRET_KEY}}
             BASE_BACKEND_URL=${{secrets.BASE_BACKEND_URL}}
