--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,8 @@ jobs:
             AWS_ACCESS_KEY_ID=${{secrets.AWS_ACCESS_KEY_ID}}
             AWS_SECRET_ACCESS_KEY=${{secrets.AWS_SECRET_ACCESS_KEY}}
             AWS_S3_CUSTOM_DOMAIN=${{secrets.AWS_S3_CUSTOM_DOMAIN}}
-            AWS_STORAGE_BUCKET_NAME=${{secrets.AWS_STORAGE_BUCKET_NAME}}
+            AWS_S3_STATIC_BUCKET_NAME=${{secrets.AWS_S3_STATIC_BUCKET_NAME}}
+            AWS_S3_MEDIA_BUCKET_NAME=${{secrets.AWS_S3_MEDIA_BUCKET_NAME}}
             GOOGLE_CLIENT_ID=${{secrets.GOOGLE_CLIENT_ID}}
             GOOGLE_CLIENT_SECRET=${{secrets.GOOGLE_CLIENT_SECRET}}
             GOOGLE_REDIRECT_URL=${{secrets.GOOGLE_REDIRECT_URL}}
