:construction: feat: add `database-diagram.png`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,19 @@ drf-rw-serializers = "^1.4.0"
 shortuuid = "^1.0.13"
 
 
+[tool.poetry.group.dev.dependencies]
+coverage = "^7.9.2"
+pytest = "^8.4.1"
+pytest-django = "^4.11.1"
+pytest-cov = "^6.2.1"
+
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "snapsapi.config.settings.local"
+python_files = ["test_*.py", "*_test.py"]
+testpaths = ["snapsapi"]
