--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ responses = "^0.25.7"
 pytest-django = "^4.11.1"
 drf-rw-serializers = "^1.4.0"
 shortuuid = "^1.0.13"
+firebase-admin = "6.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
