--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,6 +71,17 @@ jobs:
             GOOGLE_CLIENT_ID=${{secrets.GOOGLE_CLIENT_ID}}
             GOOGLE_CLIENT_SECRET=${{secrets.GOOGLE_CLIENT_SECRET}}
             GOOGLE_REDIRECT_URL=${{secrets.GOOGLE_REDIRECT_URL}}
+            FIREBASE_TYPE=${{secrets.FIREBASE_TYPE}}
+            FIREBASE_PROJECT_ID=${{secrets.FIREBASE_PROJECT_ID}}
+            FIREBASE_PRIVATE_KEY_ID=${{secrets.FIREBASE_PRIVATE_KEY_ID}}
+            FIREBASE_PRIVATE_KEY=${{secrets.FIREBASE_PRIVATE_KEY}}
+            FIREBASE_CLIENT_EMAIL=${{secrets.FIREBASE_CLIENT_EMAIL}}
+            FIREBASE_CLIENT_ID=${{secrets.FIREBASE_CLIENT_ID}}
+            FIREBASE_AUTH_URI=${{secrets.FIREBASE_AUTH_URI}}
+            FIREBASE_TOKEN_URI=${{secrets.FIREBASE_TOKEN_URI}}
+            FIREBASE_AUTH_PROVIDER_X509_CERT_URL=${{secrets.FIREBASE_AUTH_PROVIDER_X509_CERT_URL}}
+            FIREBASE_CLIENT_X509_CERT_URL=${{secrets.FIREBASE_CLIENT_X509_CERT_URL}}
+            FIREBASE_UNIVERSE_DOMAIN=${{secrets.FIREBASE_UNIVERSE_DOMAIN}}
 
       - name: Deploy ECS service (Blue/Green)
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
